# zsim

./: .clang_format  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  README.md  main.cpp
TemporarySources/: StaffForNetlistDataStructure.cpp
apps/: CMakeLists.txt
apps/main/: CMakeLists.txt  main.cpp  main.cpp.autosave
docs/: event_driven_sim_alg.txt  windows_wsl_dev_env_setup
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_copy.h
libs/: CMakeLists.txt
libs/libblifparse/: CMakeLists.txt
libs/libblifparse/src/: blifparse.hpp  main.cpp
libs/libblifparse/test/: blifparse_test
libs/libblifparse/test/eblif/: pla_test_1.blif
src/: CMakeLists.txt
src/core/: CMakeLists.txt  base_defs.cpp  base_defs.hpp  gate.cpp  gate.hpp  gate_router.cpp  gate_router.hpp  latch_defs.hpp  logic_function.hpp  logic_value_defs.hpp  net.cpp  net.hpp  netlist.cpp  netlist.hpp  netlist_hash.hpp  table.hpp  truth_table.hpp  value_defs.hpp
src/graph/: CMakeLists.txt  graph.hpp
src/id_generator/: CMakeLists.txt  id_generator.cpp  id_generator.hpp
src/simulation/: CMakeLists.txt  simulation_defs.hpp  simulation_engine.cpp  simulation_engine.hpp  timing_wheel.cpp  timing_wheel.hpp
src/zsim_algorithm/: CMakeLists.txt  all.hpp  convert.hpp  filter.hpp
tests/: small_model_1.blif  zzz
tests/data/: inputs.txt  inputs.vl  new_results.sv  result.sv  small_model_1.blif
